# timezones-display

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  timetable.cpp  timetable.h  timezones_display.desktop  version.h.in
